# eoscale

./: .gitlab-ci.yml  CHANGELOG.md  README.md  requirements.txt  setup.cfg  setup.py  sonar-project.properties
docs/source/: advanced_uses.rst  conf.py  index.rst  memory_profiling.rst  module_filters.rst  module_manager.rst  modules.rst  tuto_2.rst  tuto_3.rst  tutorials.rst
docs/source/notebooks/: add.tif  chain_filters.ipynb  common_errors.ipynb  profiling.ipynb  water_mask.ipynb
examples/: in_memory_pipeline.py  in_place_sequential_image_filter.py  n_images_m_images.py  n_images_m_scalars.py  pipeline.py  refacto_uniform_chain.py  uniform_chain.py
examples/app_example/: compute_hist_dsm.py
examples/data/: dsm.tif
examples/data/outputs/: filled_dsm.tif  nodata_mask.tif  smooth_dsm.tif
src/eoscale/: data_types.py  eo_executors.py  eo_io.py  manager.py  shared.py  utils.py
src/eoscale/core/: eo_executors.py  manager.py  shared.py
src/eoscale/filters/: concatenate_images.py  generic_kernel.py  stats_minmax.py
tests/: conftest.py  test_executors.py  test_manager.py  utils.py
tests/eo_executors/: test_executors.py
