#!/usr/bin/env python
# coding: utf8
#
# Copyright (c) 2024 Centre National d'Etudes Spatiales (CNES).
#
# This file is part of EOSCale
# (see https://github.com/CNES/eoscale).
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = eoscale
version = 1.0.0
description = Generic Earth Observation multiprocessing Python framework
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache V2.0
author = Pierre Lassalle
author_email = pierre.lassalle@cnes.fr


[options]
zip_safe = False
python_requires = >=3.8
package_dir = =src
packages = find:

[options.packages.find]
where = src


